--- a/notebook/rnn/RNN_Variable_Sequence_Lengths_Labeling.ipynb
+++ b/notebook/rnn/RNN_Variable_Sequence_Lengths_Labeling.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import tensorflow as tf\n"
+    "import tensorflow as tf"
    ]
   },
   {
@@ -23,106 +23,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-04-22 16:00:39.703078: epoch 1 avg_loss = 1.141725\n",
-      "2017-04-22 16:00:39.723343: epoch 2 avg_loss = 1.150299\n",
-      "2017-04-22 16:00:39.754619: epoch 3 avg_loss = 1.189832\n",
-      "2017-04-22 16:00:39.779191: epoch 4 avg_loss = 1.165445\n",
-      "2017-04-22 16:00:39.801631: epoch 5 avg_loss = 1.097372\n",
-      "2017-04-22 16:00:39.826005: epoch 6 avg_loss = 1.159822\n",
-      "2017-04-22 16:00:39.849285: epoch 7 avg_loss = 1.134555\n",
-      "2017-04-22 16:00:39.871044: epoch 8 avg_loss = 1.118340\n",
-      "2017-04-22 16:00:39.895659: epoch 9 avg_loss = 1.127475\n",
-      "2017-04-22 16:00:39.926874: epoch 10 avg_loss = 1.162262\n",
-      "2017-04-22 16:00:39.958194: epoch 11 avg_loss = 1.140429\n",
-      "2017-04-22 16:00:39.980689: epoch 12 avg_loss = 1.078822\n",
-      "2017-04-22 16:00:40.003267: epoch 13 avg_loss = 1.131852\n",
-      "2017-04-22 16:00:40.025395: epoch 14 avg_loss = 1.110271\n",
-      "2017-04-22 16:00:40.043379: epoch 15 avg_loss = 1.093308\n",
-      "2017-04-22 16:00:40.064978: epoch 16 avg_loss = 1.104280\n",
-      "2017-04-22 16:00:40.089103: epoch 17 avg_loss = 1.130807\n",
-      "2017-04-22 16:00:40.110499: epoch 18 avg_loss = 1.112330\n",
-      "2017-04-22 16:00:40.132902: epoch 19 avg_loss = 1.055256\n",
-      "2017-04-22 16:00:40.160200: epoch 20 avg_loss = 1.099004\n",
-      "2017-04-22 16:00:40.185373: epoch 21 avg_loss = 1.081318\n",
-      "2017-04-22 16:00:40.208436: epoch 22 avg_loss = 1.061286\n",
-      "2017-04-22 16:00:40.228732: epoch 23 avg_loss = 1.075222\n",
-      "2017-04-22 16:00:40.252277: epoch 24 avg_loss = 1.091240\n",
-      "2017-04-22 16:00:40.277499: epoch 25 avg_loss = 1.083483\n",
-      "2017-04-22 16:00:40.300650: epoch 26 avg_loss = 1.024084\n",
-      "2017-04-22 16:00:40.324447: epoch 27 avg_loss = 1.059226\n",
-      "2017-04-22 16:00:40.347593: epoch 28 avg_loss = 1.047863\n",
-      "2017-04-22 16:00:40.372630: epoch 29 avg_loss = 1.028274\n",
-      "2017-04-22 16:00:40.394254: epoch 30 avg_loss = 1.045746\n",
-      "2017-04-22 16:00:40.418483: epoch 31 avg_loss = 1.055929\n",
-      "2017-04-22 16:00:40.439121: epoch 32 avg_loss = 1.058996\n",
-      "2017-04-22 16:00:40.460744: epoch 33 avg_loss = 1.000172\n",
-      "2017-04-22 16:00:40.485865: epoch 34 avg_loss = 1.027723\n",
-      "2017-04-22 16:00:40.509872: epoch 35 avg_loss = 1.023432\n",
-      "2017-04-22 16:00:40.531844: epoch 36 avg_loss = 1.011050\n",
-      "2017-04-22 16:00:40.551858: epoch 37 avg_loss = 1.024911\n",
-      "2017-04-22 16:00:40.578792: epoch 38 avg_loss = 1.029594\n",
-      "2017-04-22 16:00:40.601592: epoch 39 avg_loss = 1.037030\n",
-      "2017-04-22 16:00:40.624817: epoch 40 avg_loss = 0.981397\n",
-      "2017-04-22 16:00:40.649166: epoch 41 avg_loss = 1.000427\n",
-      "2017-04-22 16:00:40.669304: epoch 42 avg_loss = 1.001483\n",
-      "2017-04-22 16:00:40.691117: epoch 43 avg_loss = 1.003226\n",
-      "2017-04-22 16:00:40.715679: epoch 44 avg_loss = 1.005328\n",
-      "2017-04-22 16:00:40.740098: epoch 45 avg_loss = 1.006302\n",
-      "2017-04-22 16:00:40.763177: epoch 46 avg_loss = 1.017489\n",
-      "2017-04-22 16:00:40.789598: epoch 47 avg_loss = 0.966432\n",
-      "2017-04-22 16:00:40.812689: epoch 48 avg_loss = 0.979963\n",
-      "2017-04-22 16:00:40.835203: epoch 49 avg_loss = 0.984017\n",
-      "2017-04-22 16:00:40.856446: epoch 50 avg_loss = 0.995958\n",
-      "2017-04-22 16:00:40.876806: epoch 51 avg_loss = 0.989450\n",
-      "2017-04-22 16:00:40.899855: epoch 52 avg_loss = 0.990213\n",
-      "2017-04-22 16:00:40.921880: epoch 53 avg_loss = 1.001953\n",
-      "2017-04-22 16:00:40.943795: epoch 54 avg_loss = 0.953090\n",
-      "2017-04-22 16:00:40.966676: epoch 55 avg_loss = 0.966144\n",
-      "2017-04-22 16:00:40.994678: epoch 56 avg_loss = 0.966665\n",
-      "2017-04-22 16:00:41.016518: epoch 57 avg_loss = 0.982597\n",
-      "2017-04-22 16:00:41.032235: epoch 58 avg_loss = 0.972210\n",
-      "2017-04-22 16:00:41.053075: epoch 59 avg_loss = 0.976491\n",
-      "2017-04-22 16:00:41.069940: epoch 60 avg_loss = 0.984478\n",
-      "2017-04-22 16:00:41.091361: epoch 61 avg_loss = 0.936245\n",
-      "2017-04-22 16:00:41.115200: epoch 62 avg_loss = 0.952388\n",
-      "2017-04-22 16:00:41.138546: epoch 63 avg_loss = 0.947213\n",
-      "2017-04-22 16:00:41.160691: epoch 64 avg_loss = 0.965541\n",
-      "2017-04-22 16:00:41.181582: epoch 65 avg_loss = 0.954541\n",
-      "2017-04-22 16:00:41.209801: epoch 66 avg_loss = 0.963660\n",
-      "2017-04-22 16:00:41.231131: epoch 67 avg_loss = 0.967648\n",
-      "2017-04-22 16:00:41.253521: epoch 68 avg_loss = 0.920560\n",
-      "2017-04-22 16:00:41.278465: epoch 69 avg_loss = 0.939724\n",
-      "2017-04-22 16:00:41.302832: epoch 70 avg_loss = 0.930777\n",
-      "2017-04-22 16:00:41.325282: epoch 71 avg_loss = 0.951177\n",
-      "2017-04-22 16:00:41.345003: epoch 72 avg_loss = 0.939922\n",
-      "2017-04-22 16:00:41.368507: epoch 73 avg_loss = 0.951039\n",
-      "2017-04-22 16:00:41.391189: epoch 74 avg_loss = 0.953604\n",
-      "2017-04-22 16:00:41.417302: epoch 75 avg_loss = 0.907436\n",
-      "2017-04-22 16:00:41.443011: epoch 76 avg_loss = 0.928411\n",
-      "2017-04-22 16:00:41.466892: epoch 77 avg_loss = 0.916445\n",
-      "2017-04-22 16:00:41.488640: epoch 78 avg_loss = 0.938847\n",
-      "2017-04-22 16:00:41.508153: epoch 79 avg_loss = 0.926687\n",
-      "2017-04-22 16:00:41.532368: epoch 80 avg_loss = 0.938570\n",
-      "2017-04-22 16:00:41.554180: epoch 81 avg_loss = 0.940839\n",
-      "2017-04-22 16:00:41.576598: epoch 82 avg_loss = 0.895208\n",
-      "2017-04-22 16:00:41.600806: epoch 83 avg_loss = 0.916752\n",
-      "2017-04-22 16:00:41.627897: epoch 84 avg_loss = 0.902890\n",
-      "2017-04-22 16:00:41.650426: epoch 85 avg_loss = 0.926860\n",
-      "2017-04-22 16:00:41.670302: epoch 86 avg_loss = 0.913546\n",
-      "2017-04-22 16:00:41.695630: epoch 87 avg_loss = 0.926423\n",
-      "2017-04-22 16:00:41.721877: epoch 88 avg_loss = 0.928196\n",
-      "2017-04-22 16:00:41.747639: epoch 89 avg_loss = 0.882654\n",
-      "2017-04-22 16:00:41.771043: epoch 90 avg_loss = 0.904150\n",
-      "2017-04-22 16:00:41.796004: epoch 91 avg_loss = 0.889306\n",
-      "2017-04-22 16:00:41.820365: epoch 92 avg_loss = 0.914635\n",
-      "2017-04-22 16:00:41.846529: epoch 93 avg_loss = 0.900101\n",
-      "2017-04-22 16:00:41.871548: epoch 94 avg_loss = 0.913765\n",
-      "2017-04-22 16:00:41.894319: epoch 95 avg_loss = 0.915329\n",
-      "2017-04-22 16:00:41.918153: epoch 96 avg_loss = 0.869582\n",
-      "2017-04-22 16:00:41.943015: epoch 97 avg_loss = 0.891008\n",
-      "2017-04-22 16:00:41.966291: epoch 98 avg_loss = 0.875368\n",
-      "2017-04-22 16:00:41.988647: epoch 99 avg_loss = 0.902079\n",
-      "2017-04-22 16:00:42.009340: epoch 100 avg_loss = 0.886254\n",
+      "2017-04-24 14:39:05.919187: epoch 1 avg_loss = 1.147794\n",
+      "2017-04-24 14:39:05.957375: epoch 2 avg_loss = 1.173444\n",
+      "2017-04-24 14:39:05.992926: epoch 3 avg_loss = 1.125526\n",
+      "2017-04-24 14:39:06.025304: epoch 4 avg_loss = 1.156233\n",
+      "2017-04-24 14:39:06.057438: epoch 5 avg_loss = 1.155858\n",
+      "2017-04-24 14:39:06.089595: epoch 6 avg_loss = 1.097722\n",
+      "2017-04-24 14:39:06.128443: epoch 7 avg_loss = 1.140637\n",
+      "2017-04-24 14:39:06.165273: epoch 8 avg_loss = 1.113705\n",
+      "2017-04-24 14:39:06.201642: epoch 9 avg_loss = 1.132878\n",
+      "2017-04-24 14:39:06.232779: epoch 10 avg_loss = 1.090742\n",
+      "2017-04-24 14:39:06.262576: epoch 11 avg_loss = 1.116564\n",
+      "2017-04-24 14:39:06.294061: epoch 12 avg_loss = 1.115048\n",
+      "2017-04-24 14:39:06.325620: epoch 13 avg_loss = 1.062377\n",
+      "2017-04-24 14:39:06.363779: epoch 14 avg_loss = 1.094674\n",
+      "2017-04-24 14:39:06.393786: epoch 15 avg_loss = 1.072043\n",
+      "2017-04-24 14:39:06.428580: epoch 16 avg_loss = 1.079789\n",
+      "2017-04-24 14:39:06.462332: epoch 17 avg_loss = 1.044403\n",
+      "2017-04-24 14:39:06.494654: epoch 18 avg_loss = 1.066792\n",
+      "2017-04-24 14:39:06.526553: epoch 19 avg_loss = 1.067295\n",
+      "2017-04-24 14:39:06.557802: epoch 20 avg_loss = 1.013961\n",
+      "2017-04-24 14:39:06.598562: epoch 21 avg_loss = 1.044678\n",
+      "2017-04-24 14:39:06.627533: epoch 22 avg_loss = 1.032054\n",
+      "2017-04-24 14:39:06.659179: epoch 23 avg_loss = 1.031606\n",
+      "2017-04-24 14:39:06.694073: epoch 24 avg_loss = 1.009864\n",
+      "2017-04-24 14:39:06.725387: epoch 25 avg_loss = 1.025082\n",
+      "2017-04-24 14:39:06.758135: epoch 26 avg_loss = 1.035941\n",
+      "2017-04-24 14:39:06.790872: epoch 27 avg_loss = 0.986316\n",
+      "2017-04-24 14:39:06.831442: epoch 28 avg_loss = 1.002555\n",
+      "2017-04-24 14:39:06.863771: epoch 29 avg_loss = 1.008728\n",
+      "2017-04-24 14:39:06.899398: epoch 30 avg_loss = 1.001176\n",
+      "2017-04-24 14:39:06.934714: epoch 31 avg_loss = 0.986312\n",
+      "2017-04-24 14:39:06.968782: epoch 32 avg_loss = 0.989610\n",
+      "2017-04-24 14:39:07.000992: epoch 33 avg_loss = 1.013305\n",
+      "2017-04-24 14:39:07.032626: epoch 34 avg_loss = 0.966312\n",
+      "2017-04-24 14:39:07.075384: epoch 35 avg_loss = 0.972778\n",
+      "2017-04-24 14:39:07.107009: epoch 36 avg_loss = 0.990726\n",
+      "2017-04-24 14:39:07.141783: epoch 37 avg_loss = 0.979073\n",
+      "2017-04-24 14:39:07.178145: epoch 38 avg_loss = 0.964531\n",
+      "2017-04-24 14:39:07.212037: epoch 39 avg_loss = 0.967366\n",
+      "2017-04-24 14:39:07.256880: epoch 40 avg_loss = 0.988086\n",
+      "2017-04-24 14:39:07.297493: epoch 41 avg_loss = 0.941100\n",
+      "2017-04-24 14:39:07.342130: epoch 42 avg_loss = 0.949464\n",
+      "2017-04-24 14:39:07.372727: epoch 43 avg_loss = 0.966237\n",
+      "2017-04-24 14:39:07.406940: epoch 44 avg_loss = 0.956258\n",
+      "2017-04-24 14:39:07.441421: epoch 45 avg_loss = 0.938660\n",
+      "2017-04-24 14:39:07.474683: epoch 46 avg_loss = 0.946627\n",
+      "2017-04-24 14:39:07.508983: epoch 47 avg_loss = 0.963193\n",
+      "2017-04-24 14:39:07.545237: epoch 48 avg_loss = 0.918058\n",
+      "2017-04-24 14:39:07.583030: epoch 49 avg_loss = 0.929428\n",
+      "2017-04-24 14:39:07.614835: epoch 50 avg_loss = 0.945291\n",
+      "2017-04-24 14:39:07.656402: epoch 51 avg_loss = 0.936594\n",
+      "2017-04-24 14:39:07.699189: epoch 52 avg_loss = 0.919207\n",
+      "2017-04-24 14:39:07.735001: epoch 53 avg_loss = 0.928248\n",
+      "2017-04-24 14:39:07.776709: epoch 54 avg_loss = 0.942483\n",
+      "2017-04-24 14:39:07.805319: epoch 55 avg_loss = 0.899291\n",
+      "2017-04-24 14:39:07.841267: epoch 56 avg_loss = 0.910609\n",
+      "2017-04-24 14:39:07.878801: epoch 57 avg_loss = 0.926752\n",
+      "2017-04-24 14:39:07.912850: epoch 58 avg_loss = 0.917801\n",
+      "2017-04-24 14:39:07.952795: epoch 59 avg_loss = 0.900499\n",
+      "2017-04-24 14:39:07.987777: epoch 60 avg_loss = 0.909501\n",
+      "2017-04-24 14:39:08.019848: epoch 61 avg_loss = 0.923073\n",
+      "2017-04-24 14:39:08.056443: epoch 62 avg_loss = 0.879622\n",
+      "2017-04-24 14:39:08.085563: epoch 63 avg_loss = 0.891185\n",
+      "2017-04-24 14:39:08.121940: epoch 64 avg_loss = 0.907932\n",
+      "2017-04-24 14:39:08.166812: epoch 65 avg_loss = 0.897926\n",
+      "2017-04-24 14:39:08.195796: epoch 66 avg_loss = 0.881044\n",
+      "2017-04-24 14:39:08.230227: epoch 67 avg_loss = 0.889506\n",
+      "2017-04-24 14:39:08.265514: epoch 68 avg_loss = 0.902921\n",
+      "2017-04-24 14:39:08.296421: epoch 69 avg_loss = 0.859125\n",
+      "2017-04-24 14:39:08.325879: epoch 70 avg_loss = 0.870432\n",
+      "2017-04-24 14:39:08.351720: epoch 71 avg_loss = 0.887888\n",
+      "2017-04-24 14:39:08.369328: epoch 72 avg_loss = 0.877048\n",
+      "2017-04-24 14:39:08.413967: epoch 73 avg_loss = 0.860783\n",
+      "2017-04-24 14:39:08.444402: epoch 74 avg_loss = 0.868057\n",
+      "2017-04-24 14:39:08.474026: epoch 75 avg_loss = 0.882069\n",
+      "2017-04-24 14:39:08.503933: epoch 76 avg_loss = 0.838116\n",
+      "2017-04-24 14:39:08.536470: epoch 77 avg_loss = 0.848450\n",
+      "2017-04-24 14:39:08.575064: epoch 78 avg_loss = 0.867188\n",
+      "2017-04-24 14:39:08.611359: epoch 79 avg_loss = 0.855930\n",
+      "2017-04-24 14:39:08.639912: epoch 80 avg_loss = 0.840224\n",
+      "2017-04-24 14:39:08.674726: epoch 81 avg_loss = 0.845609\n",
+      "2017-04-24 14:39:08.713304: epoch 82 avg_loss = 0.861692\n",
+      "2017-04-24 14:39:08.750448: epoch 83 avg_loss = 0.817556\n",
+      "2017-04-24 14:39:08.789213: epoch 84 avg_loss = 0.825510\n",
+      "2017-04-24 14:39:08.817887: epoch 85 avg_loss = 0.847009\n",
+      "2017-04-24 14:39:08.851000: epoch 86 avg_loss = 0.835412\n",
+      "2017-04-24 14:39:08.882631: epoch 87 avg_loss = 0.819574\n",
+      "2017-04-24 14:39:08.913000: epoch 88 avg_loss = 0.822507\n",
+      "2017-04-24 14:39:08.944946: epoch 89 avg_loss = 0.842278\n",
+      "2017-04-24 14:39:08.979895: epoch 90 avg_loss = 0.797441\n",
+      "2017-04-24 14:39:09.017809: epoch 91 avg_loss = 0.802089\n",
+      "2017-04-24 14:39:09.056153: epoch 92 avg_loss = 0.827389\n",
+      "2017-04-24 14:39:09.091795: epoch 93 avg_loss = 0.815705\n",
+      "2017-04-24 14:39:09.126085: epoch 94 avg_loss = 0.799234\n",
+      "2017-04-24 14:39:09.156011: epoch 95 avg_loss = 0.799983\n",
+      "2017-04-24 14:39:09.185252: epoch 96 avg_loss = 0.823621\n",
+      "2017-04-24 14:39:09.215623: epoch 97 avg_loss = 0.777937\n",
+      "2017-04-24 14:39:09.247801: epoch 98 avg_loss = 0.779991\n",
+      "2017-04-24 14:39:09.276886: epoch 99 avg_loss = 0.808097\n",
+      "2017-04-24 14:39:09.313171: epoch 100 avg_loss = 0.796986\n",
       "Finished!\n"
      ]
     }
@@ -234,7 +234,7 @@
     "LEARNING_RATE = 1e-3\n",
     "TRAINING_SET_SIZE = 7\n",
     "\n",
-    "filename = 'Sequence_test_3.tfr'\n",
+    "filename = 'Sequence_labeling.tfr'\n",
     "with tf.Graph().as_default():\n",
     "    tf.set_random_seed(10)\n",
     "    np.random.seed(10)    \n",
@@ -256,7 +256,9 @@
     "        # Training cycles\n",
     "        for epoch in range(1, NUM_EPOCHS+1):\n",
     "            epoch_avg_loss = 0.0\n",
-    "            total_batch = int(TRAINING_SET_SIZE / BATCH_SIZE)\n",
+    "            total_batch = int(TRAINING_SET_SIZE / BATCH_SIZE\n",
+    "                ) + 1 if TRAINING_SET_SIZE % BATCH_SIZE != 0 else int(\n",
+    "                TRAINING_SET_SIZE / BATCH_SIZE)\n",
     "            for step in range(1, total_batch +1):\n",
     "                if coord.should_stop():\n",
     "                    break\n",
