add new way to get the last relevant output for sequence classification

--- a/notebook/rnn/RNN_Variable_Sequence_Lengths.ipynb
+++ b/notebook/rnn/RNN_Variable_Sequence_Lengths.ipynb
@@ -318,6 +318,7 @@
     "\n",
     "\n",
     "# (4) Get the last relevent output of variable time-step length examples in a batch\n",
+    "# <1> Old way:\n",
     "def last_relevant(outputs, seq_lengths):\n",
     "    \"\"\"\n",
     "    :param outputs: [batch_size x max_seq_length x hidden_size] tensor of dynamic_rnn outputs\n",
@@ -327,12 +328,22 @@
     "    batch_size, max_seq_length, hidden_size = tf.unpack(tf.shape(outputs))\n",
     "    index = tf.range(0, batch_size) * max_seq_length + (seq_lengths - 1)\n",
     "    return tf.gather(tf.reshape(outputs, [-1, hidden_size]), index)\n",
+    "\n",
+    "# <2> New way:\n",
+    "def _last_relevant(outputs, actual_lengths):\n",
+    "    \"\"\"\n",
+    "    :param outputs: [batch_size x max_seq_length x hidden_size] tensor of dynamic_rnn outputs\n",
+    "    :param actual_lengths: [batch_size] tensor of sequence actual lengths\n",
+    "    :return: [batch_size x hidden_size] tensor of last outputs\n",
+    "    \"\"\"\n",
+    "    batch_size = tf.shape(outputs)[0]\n",
+    "    return tf.gather_nd(outputs, tf.stack([tf.range(batch_size), actual_lengths - 1], axis=1))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -346,15 +357,6 @@
     "# (5) https://github.com/aymericdamien/TensorFlow-Examples/blob/master/examples/3_NeuralNetworks/dynamic_rnn.py\n",
     "# (6) https://medium.com/@erikhallstrm/hello-world-rnn-83cd7105b767\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
